# rules-sdlc

./: .all-clang-format  .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clazy  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmessage  .gitmodules  .mailmap  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .travis.yml  .vscodeignore  BUILD  BUILD copy.bazel  BUILD.bazel  CONTRIBUTING.md  Makefile  README.md  Vagrantfile  WORKSPACE  bazel.rc  bitbucket-pipelines.yml  changelog.yml  opendds.bzl  quantumzip  repositories.bzl  run  setup_external_repo.bzl  sonar-project.properties  version.bzl
.circleci/: config.yml
dds/: BUILD.bazel
middlewares/: BUILD.bazel
middlewares/ace/: ace_tao_dds.BUILD  doc_group_ace.bzl
middlewares/dds/: BUILD.bazel  generate_idl.bzl
middlewares/dds/opendds/: opendds.bzl
middlewares/tao/: tao.bzl  the_ace_orb.bzl
src/assembly/: BUILD.bazel
src/it/: BUILD.bazel
src/it/features/: 0000-Dummy.feature
src/it/features/step_definitions/: DummyTestSteps.cpp  DummyTestSteps.hpp  Tips.cpp
src/it/features/support/: hooks.rb
src/it/rules/sdlc/std/features/step_definitions/: BookStoreTestSteps.hpp  DummyTestSteps.cpp  DummyTestSteps.hpp  Tips.cpp
src/main/cpp/: BUILD.bazel  main.cpp
src/main/cpp/rules/sdlc/common/: API_Export.hpp  CompilerDetection.hpp  NetworkPlugin.cpp  NetworkPlugin.hpp  PimplPtr.hpp  PimplPtr.inl  Poison.hpp  SharedPimplPtr.hpp  main.cpp
src/main/cpp/rules/sdlc/common/app/: AppInfo.hpp  Application.cpp  Application.hpp  ApplicationPrivate.cpp  ApplicationPrivate.hpp  Channel.cpp  Channel.hpp  ExecutionContext.cpp  ExecutionContext.hpp  Method.cpp  Method.hpp  MethodCaller.cpp  MethodCaller.hpp  OptionDescription.cpp  OptionDescription.hpp  Plugin.cpp  Plugin.hpp  PluginInterface.cpp  PluginInterface.hpp
src/main/cpp/rules/sdlc/common/demo/: BookStore.cpp  BookStore.hpp  CodingStyle.cpp  CodingStyle.hpp  Dummy.cpp  Dummy.hpp  DummyPlugin.cpp  DummyPlugin.hpp
src/main/cpp/rules/sdlc/common/logging/: CentralizedLogging.cpp  CentralizedLogging.hpp  ColorPatternLayout.cpp  ColorPatternLayout.hpp  ColorStdOuputLogMsg.cpp  ColorStdOuputLogMsg.hpp  LoggingService.cpp  LoggingService.hpp  LoggingServicePrivate.cpp  LoggingServicePrivate.hpp
src/main/cpp/rules/sdlc/std/: API_Export.hpp  CompilerDetection.hpp  Dummy.cpp  Dummy.hpp  DummyPlugin.hpp  PimplPtr.hpp  PimplPtr.inl  Poison.hpp  SharedPimplPtr.hpp  SharedPimplPtr.inl  Version.cpp  Version.hpp  main.cpp
src/main/cpp/std/: BUILD.bazel  Dummy.cpp  Dummy.hpp  LoggingService.cpp  LoggingService.hpp  main.cpp
src/main/resources/off_the_shelf_software/apr/: BUILD.apr.bazel  BUILD.bazel  apr.BUILD  apr_repositories.bzl
src/main/resources/off_the_shelf_software/apr_util/: BUILD.apr_util.bazel  BUILD.bazel  BUILD.expat.bazel  apr_util_repositories.bzl
src/main/resources/off_the_shelf_software/boost/: BUILD.bazel  BUILD.boost.bazel  boost.BUILD  boost.bzl  boost_repositories.bzl
src/main/resources/off_the_shelf_software/cucumber_cpp/: BUILD.cucumber-cpp.bazel  cucumber_cpp_repositories.bzl
src/main/resources/off_the_shelf_software/curl/: BUILD.bazel  BUILD.curl.bazel  curl_repositories.bzl
src/main/resources/off_the_shelf_software/libevent/: BUILD.libevent.bazel
src/main/resources/off_the_shelf_software/log4cxx/: BUILD.bazel  BUILD.log4cxx.bazel  log4cxx.BUILD  log4cxx_repositories.bzl
src/main/resources/off_the_shelf_software/openssl/: BUILD.bazel  BUILD.openssl.bazel  BUILD.openssl3.bazel  openssl_conf.BUILD  openssl_repositories.bzl
src/main/resources/soup/: BUILD.bazel  apr-utils.BUILD  apr.BUILD  boost.BUILD  expat.BUILD  fmt.bazel  fontconfig.BUILD  gstreamer.BUILD  log4cxx.BUILD  nghttp2.BUILD  openblas.BUILD  openssl.BUILD  rapidjson.BUILD  xerces.BUILD
src/main/resources/soup/log4cxx/unix/: BUILD.bazel  boost-std-configuration.h  log4cxx.BUILD  log4cxx_private.h
src/main/resources/starlark/: BUILD.bazel  Visibility.bzl  ace.BUILD  armcc.bzl  attribute_manipulations.bzl  common.bzl  configure_copts.bzl  copts.bzl  debug.bzl  dependencies.bzl  generate_export_header.bzl  git_hash.bzl  hash_gen.bzl  helpers.bzl  idl2cpp_gen.bzl  internal_deps.bzl  junit5.bzl  local.bzl  midlware.bzl  mvn_party.bzl  opendds.BUILD  pathSelector.bzl  pkg_config.BUILD.tpl  pkg_config.bzl  png.BUILD  repositories.bzl  run_in_workspace.bzl  setup_external_repo.bzl  sw_dev.bzl  sw_qa.bzl  sw_qa_repositories.bzl  tab_cc_common_compile.bzl  tab_cc_compile_internal.bzl  tao.BUILD  utils.bzl  version.bzl
src/main/resources/starlark/rules/: BUILD.bazel  compiler.bzl  copts.bzl  repositories.bzl  sw_qa.bzl  toolchain.bzl
src/main/resources/starlark/rules/cc_bdd/: BUILD.bazel  Gemfile  bdd_ws_tools.bzl  cc_bdd_deps.bzl  cc_gherkin_wire_steps.sh.tpl  cc_gherkin_wire_test.sh.tpl  cucumber-xvfb  defs.bzl
src/main/resources/starlark/rules/codechecker/: BUILD.bazel
src/main/resources/starlark/rules/cpplint/: CPPLINT.cfg  linter.bzl
src/main/resources/starlark/rules/private/: BUILD.bazel  helpers.bzl  toolchains_repo.bzl
src/main/resources/starlark/rules/tests/: BUILD.bazel  versions_test.bzl
src/main/resources/toolchain/qt/: BUILD.bazel  qt.bzl
src/main/scripts/style/: .uncrustify.cfg  BUILD.bazel  code-style.cfg  copyright.py  hpp.cfg  run-clang-tidy.py  uncrustify.sh
src/test/cpp/: BUILD.bazel  unitTestRunner.cpp
src/test/cpp/rules/sdlc/common/: ConfigurableEventListener.cpp  ConfigurableEventListener.hpp  CustomEnvironment.cpp  CustomEnvironment.hpp  DummyTest.cpp  DummyTest.hpp  GTestEventListener.cpp  GTestEventListener.hpp  UnitTest.cpp  UnitTest.hpp  unitTestRunner.cpp
src/test/cpp/rules/sdlc/std/: ConfigurableEventListener.cpp  ConfigurableEventListener.hpp  CustomEnvironment.cpp  CustomEnvironment.hpp  DummyTest.cpp  DummyTest.hpp  GTestEventListener.cpp  GTestEventListener.hpp  Test.cpp  Test.hpp  UnitTest.cpp  UnitTest.hpp  unitTest.cpp  unitTestRunner.cpp
src/test/cpp/std/: ConfigurableEventListener.cpp  CustomEnvironment.cpp  GTestEventListener.cpp  GTestEventListener.hpp  Test.hpp  unitTest.cpp
(+458 files in other folders)
