

sh_binary(
    name = "tao-idl-bin",
    srcs = ["bin/tao_idl"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "opendds-idl-bin",
    srcs = ["bin/opendds_idl"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "ace-perf",
    srcs = ["bin/ace_gperf"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "idl-2-jni",
    srcs = ["bin/idl2jni"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "tao-catior",
    srcs = ["bin/tao_catior"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "tao-cosnaming",
    srcs = ["bin/tao_cosnaming"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "tao-idl3-to-idl2",
    srcs = ["bin/tao_idl3_to_idl2"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "tao-idl3-to-xm",
    srcs = ["bin/tao_idl3_to_xmi"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "tao-nsadd",
    srcs = ["bin/tao_nsadd"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "tao-nsdel",
    srcs = ["bin/tao_nsdel"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "tao-nsgroup",
    srcs = ["bin/tao_nsgroup"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "tao-nslist",
    srcs = ["bin/tao_nslist"],
    visibility = ["//visibility:public"],
)

#sh_binary(
#    name = "idl.toJavaPortable.Compile",
#    srcs = ["bin/idlj"],
#    visibility = ["//visibility:public"],
#)

