# # #           Copyright (C) 2023 Adrien H.
# # # All rights reserved.
# # #
# # # Redistribution and use in source and binary forms, with or without
# # # modification, are permitted provided that the following conditions
# # # are met:
# # # 1. Redistributions of source code must retain the above copyright
# # #    notice, this list of conditions and the following disclaimer.
# # # 2. Redistributions in binary form must reproduce the above copyright
# # #    notice, this list of conditions and the following disclaimer in the
# # #    documentation and/or other materials provided with the distribution.
# # #
# # # THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND
# # # ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# # # IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# # # ARE DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR OR CONTRIBUTORS BE LIABLE
# # # FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# # # DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
# # # OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
# # # HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
# # # LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
# # # OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
# # # SUCH DAMAGE.

# load(
#     "@rules_pkg//:pkg.bzl",
#     "pkg_deb",
#     "pkg_tar"
# )

# licenses(["notice"])  # Apache License

# load(
#     "@com.github.doevelopper.rules-sdlc//src/main/resources/starlark/rules/cc_bdd:defs.bzl",
#     "gherkin_library",
#     "gherkin_test",
#     "cc_gherkin_steps"
# )

# gherkin_library(
#     name = "com.github.doevelopper.rules.sdlc.feature",
#     # srcs = glob(["**/*.feature"]),
#     srcs =[
#         "features/0000-Dummy.feature",
#     ],
# )

# cc_gherkin_steps(
#     name = "com.github.doevelopper.rules.sdlc.steps",
#     srcs = [
#         "project/object/model/features/step_definitions/DummyTestSteps.hpp",
#         "project/object/model/features/step_definitions/DummyTestSteps.cpp",
#     ],
#     includes = [
#         ".",
#     ],
#     visibility = ["//visibility:public"],
#     deps = [
#         "@com.github.doevelopper.rules-sdlc//src/main/cpp:com.github.doevelopper.rules.sdlc.main",
#         "@com_google_googletest//:gtest",
#         # "@cucumber_cpp//src:cucumber_main",
#         "@com_github_cucumber_cucumber_cpp//:cucumber_cpp",
#         # "@org_apache_logging_log4cxx//:log4cxx",
#     ],
# )


# # cc_gherkin_steps(
# #     name = "com.github.doevelopper.rules.sdlc.steps",
# #     srcs = [
# #         "features/step_definitions/DummyTestSteps.hpp",
# #         "features/step_definitions/DummyTestSteps.cpp",
# #     ],
# #     includes = [
# #         ".",
# #     ],
# #     visibility = ["//visibility:public"],
# #     deps = [
# #         "@com.github.doevelopper.rules-sdlc//src/main/cpp:com.github.doevelopper.rules.sdlc.main",
# #         "@com_google_googletest//:gtest",
# #         "@com_github_cucumber_cucumber_cpp//:cucumber_cpp",
# #     ],
# # )
